--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "dwm"]
 	path = dwm
 	url = https://github.com/khanghugo/dwm.git
+[submodule "slstatus"]
+	path = slstatus
+	url = https://github.com/khanghugo/slstatus.git
+[submodule "st"]
+	path = st
+	url = https://github.com/khanghugo/st.git
+[submodule "dmenu"]
+	path = dmenu
+	url = https://github.com/khanghugo/dmenu.git
